--- a/config.yaml
+++ b/config.yaml
@@ -49,7 +49,7 @@ params:
 
   socialIcons:
     - name: GitHub
-      url: "https://github.com/Suzhou-KUG/suzhou-kug.github.io"
+      url: "https://github.com/Suzhou-KUG"
     - name: Email
       url: "mailto:miller2017@qq.com"
 
